@@ -77,6 +77,7 @@
                     <archive>
                         <manifestEntries>
                             <Main-Class>za.co.absa.spline.testdatagen.GenCLI</Main-Class>
+                            <Add-Opens>java.base/sun.net.www.protocol.jar</Add-Opens>
                         </manifestEntries>
                     </archive>
                 </configuration>
